<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGetCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_current_location"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/latlng"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/longitude"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_add_current_latlng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_current_latlng"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btn_SHOW_LAT_LNG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_lat_lng"
        android:layout_margin="8dp"/>


    <TextView
        android:id="@+id/textAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>